--- a/index.html
+++ b/index.html
@@ -182,9 +182,8 @@
                             <h3>Hacking (CTF)</h3>
                         </div>
                         <div class="card-body">
-                            <p>Je fais des défis pratiques de hacking que l'on appelle "CTF". Le but consiste à pirater une machine en partant d'une application web vulnérable fictive. Je suis actuellement niveau 13.</p>
+                            <p>Je fais des défis pratiques de hacking que l'on appelle "CTF". Le but consiste à pirater une machine en partant d'une application web vulnérable fictive. Je suis actuellement niveau Legend et me situe à la 20k ème place (top 2%).</p>
                             <ul class="tech-tags">
-                                <li>Root-Me</li>
                                 <li>TryHackMe</li>
                             </ul>
                         </div>
