--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <p class="cert-subtitle">Badges vérifiés par Cisco Networking Academy</p>
                     
                     <div class="badges-wrapper">
-                        <a href="https://www.credly.com/badges/7d5ec228-fc3a-4f1f-99c9-c7dccd949fc3" target="_blank" class="badge-card">
+                        <a href="https://www.credly.com/badges/70d71df5-f3dc-4380-9b9d-f22513a70417/public_url" target="_blank" class="badge-card">
                             <div class="badge-glow"></div>
                             <img src="assets/img/CCNAITN__1_.png" alt="Badge Cisco CCNA Introduction to Networks" class="badge-img">
                             <div class="badge-info">
@@ -150,7 +150,7 @@
                             </div>
                         </a>
 
-                        <a href="https://www.credly.com/badges/78aa1ddb-df6a-4388-b6ec-52fce8ad98d1" target="_blank" class="badge-card">
+                        <a href="https://www.credly.com/badges/f4ccdba9-dd65-4349-baad-8f05df116443/public_url" target="_blank" class="badge-card">
                             <div class="badge-glow"></div>
                             <img src="assets/img/CCNASRWE__1_.png" alt="Badge Cisco CCNA Switching, Routing, and Wireless Essentials" class="badge-img">
                             <div class="badge-info">
@@ -159,6 +159,18 @@
                                 <span class="status-verified"><i class="fas fa-check-circle"></i> Vérifié</span>
                             </div>
                         </a>
+
+                        <div class="badge-card badge-locked">
+                            <div class="badge-overlay">
+                                <i class="fas fa-lock"></i>
+                            </div>
+                            <img src="assets/img/CCNA3.png" alt="Badge Cisco CCNA Enterprise Networking" class="badge-img">
+                            <div class="badge-info">
+                                <h4>CCNA 3</h4>
+                                <span>Enterprise Networking, Security & Automation</span>
+                                <span class="status-pending"><i class="fas fa-spinner fa-spin"></i> En cours</span>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="credly-link-container">
@@ -182,8 +194,12 @@
                             <h3>Hacking (CTF)</h3>
                         </div>
                         <div class="card-body">
-                            <p>Je fais des défis pratiques de hacking que l'on appelle "CTF". Le but consiste à pirater une machine en partant d'une application web vulnérable fictive. Je suis actuellement niveau Legend et me situe à la 20k ème place (top 2%).</p>
+                            <p>Je fais des défis pratiques de hacking que l'on appelle "CTF". Le but consiste à pirater une machine en partant d'une application web vulnérable fictive. Je suis actuellement niveau 13.</p>
+                            <p class="project-link-p">
+                                <a href="https://tryhackme.com/p/ShonencY" target="_blank" class="link-text"><i class="fas fa-user-secret"></i> Voir mon profil TryHackMe</a>
+                            </p>
                             <ul class="tech-tags">
+                                <li>Root-Me</li>
                                 <li>TryHackMe</li>
                             </ul>
                         </div>
