--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     
                     <div class="cta-group">
                         <a href="#projects" class="btn-primary">Voir mes SAE <i class="fas fa-arrow-right"></i></a>
-                        <a href="assets/cv.pdf" target="_blank" class="btn-secondary">Mon CV <i class="fas fa-download"></i></a>
+                        <a href="assets/img/CV.pdf" target="_blank" class="btn-secondary">Mon CV <i class="fas fa-download"></i></a>
                     </div>
                     
                     <div class="hero-stats">
