--- a/index.html
+++ b/index.html
@@ -339,22 +339,31 @@
             <div class="container">
                 <h2 class="section-title">Autres Compétences 🎹</h2>
                 <div class="hobbies-wrapper">
+                    
                     <div class="hobby-box">
                         <i class="fas fa-video"></i>
                         <h4>Montage Vidéo</h4>
                         <p>5 ans d'expérience YouTube. Montage pour influenceurs et réalisation d'un court-métrage sur la sécurité informatique.</p>
                         <a href="https://youtu.be/dxaL-Xzxgqw" target="_blank" class="link-text">Voir la vidéo</a>
                     </div>
+
+                    <div class="hobby-box">
+                        <i class="fas fa-sliders-h"></i> <h4>MAO / FL Studio</h4>
+                        <p>Utilisation très régulière pour la création de prods (instrumentales) et le beatmaking. Maîtrise du workflow audio.</p>
+                    </div>
+
                     <div class="hobby-box">
                         <i class="fas fa-music"></i>
                         <h4>Piano</h4>
                         <p>Pratique régulière pour la créativité et la discipline.</p>
                     </div>
+
                     <div class="hobby-box">
                         <i class="fas fa-users"></i>
                         <h4>Relationnel</h4>
                         <p>Je n'ai aucun mal à faire de nouvelles rencontres et à avoir un bon feeling avec les gens. J'aime le travail d'équipe.</p>
                     </div>
+
                 </div>
             </div>
         </section>
