--- a/index.html
+++ b/index.html
@@ -348,8 +348,8 @@
                     </div>
 
                     <div class="hobby-box">
-                        <i class="fas fa-sliders-h"></i> <h4>MAO / FL Studio</h4>
-                        <p>Utilisation très régulière pour la création de prods (instrumentales) et le beatmaking. Maîtrise du workflow audio.</p>
+                        <i class="fas fa-sliders-h"></i> <h4>FL Studio</h4>
+                        <p>Utilisation très régulière pour la création de prods (instrumentales) et le beatmaking. Maîtrise des paramètres audios pour une comptabilité sonore sur tous les appareils.</p>
                     </div>
 
                     <div class="hobby-box">
