--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                             <h3>Hacking (CTF)</h3>
                         </div>
                         <div class="card-body">
-                            <p>Je fais des défis pratiques de hacking que l'on appelle "CTF". Le but consiste à pirater une machine en partant d'une application web vulnérable fictive. Je suis actuellement niveau 13.</p>
+                            <p>Je fais des défis pratiques de hacking que l'on appelle "CTF". Le but consiste à pirater une machine en partant d'une application web vulnérable fictive. Je suis actuellement niveau LEGEND et me situe à la 20k ème place (Top 2%).</p>
                             <p class="project-link-p">
                                 <a href="https://tryhackme.com/p/ShonencY" target="_blank" class="link-text"><i class="fas fa-user-secret"></i> Voir mon profil TryHackMe</a>
                             </p>
