--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#home">Accueil</a></li>
                 <li><a href="#skills">Compétences</a></li>                
                 <li><a href="#projects">Projets (SAE)</a></li>
-                <li><a href="#hobbies">Loisirs</a></li>
+                <li><a href="#hobbies">Hobbies</a></li>
                 <li><a href="#contact" class="btn-nav">Me Contacter</a></li>
             </ul>
             <div class="hamburger">
