--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 
         <section id="hobbies" class="section">
             <div class="container">
-                <h2 class="section-title">Autres Compétences 🎹</h2>
+                <h2 class="section-title">Hobbies</h2>
                 <div class="hobbies-wrapper">
                     
                     <div class="hobby-box">
