--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     
                     <div class="cta-group">
                         <a href="#projects" class="btn-primary"><span data-i18n="btn_sae">Voir mes SAE</span> <i class="fas fa-arrow-right"></i></a>
-                        <a href="assets/img/CV.pdf" target="_blank" class="btn-secondary"><span data-i18n="btn_cv">Mon CV</span> <i class="fas fa-download"></i></a>
+                        <a href="assets/cv.pdf" target="_blank" class="btn-secondary"><span data-i18n="btn_cv">Mon CV</span> <i class="fas fa-download"></i></a>
                     </div>
                     
                     <div class="hero-stats">
@@ -165,7 +165,7 @@
                             <div class="badge-overlay">
                                 <i class="fas fa-lock"></i>
                             </div>
-                            <img src="assets/img/CCNA3.png" alt="Badge Cisco CCNA 3" class="badge-img">
+                            <img src="assets/img/CCNA.png" alt="Badge Cisco CCNA 3" class="badge-img">
                             <div class="badge-info">
                                 <h4>CCNA 3</h4>
                                 <span>Enterprise Networking, Security & Automation</span>
@@ -201,106 +201,134 @@
                             </p>
                             <ul class="tech-tags">
                                 <li>TryHackMe</li>
+                                <li>Root-Me</li>
                             </ul>
                         </div>
                     </article>
 
                     <article class="project-card" data-category="network">
                         <div class="card-header">
-                            <span class="tag">SAE 2.04</span>
+                            <span class="tag" data-i18n="tag_204">SAE 2.04</span>
                             <h3 data-i18n="tit_204">Projet intégratif</h3>
                         </div>
                         <div class="card-body">
                             <p data-i18n="desc_204">Projet d’équipe (3 personnes) pour concevoir une infrastructure réseau sécurisée pour la NBA (scénario fictif), en appliquant des configurations sur switches, routeurs et serveurs DNS/DHCP/Web.</p>
-                            <ul class="tech-tags"><li>Cisco</li><li>Infra</li></ul>
+                            <ul class="tech-tags">
+                                <li>Cisco</li>
+                                <li data-i18n="tag_infra">Infra</li>
+                            </ul>
                         </div>
                     </article>
 
                     <article class="project-card" data-category="dev">
                        <div class="card-header">
-                           <span class="tag">SAE 2.03</span>
+                           <span class="tag" data-i18n="tag_203">SAE 2.03</span>
                            <h3 data-i18n="tit_203">Solution informatique</h3>
                        </div>
                        <div class="card-body">
                            <p data-i18n="desc_203">Conception d’une base de données SQL sur les incidents en cybersécurité des 10 dernières années, avec un diagramme UML pour structurer les liens entre classes.</p>
-                           <ul class="tech-tags"><li>SQL</li><li>UML</li></ul>
+                           <ul class="tech-tags">
+                               <li>SQL</li>
+                               <li>UML</li>
+                           </ul>
                        </div>
                    </article>
 
                    <article class="project-card" data-category="telecom">
                         <div class="card-header">
-                            <span class="tag">SAE 2.02</span>
+                            <span class="tag" data-i18n="tag_202">SAE 2.02</span>
                             <h3 data-i18n="tit_202">Mesures physiques</h3>
                         </div>
                         <div class="card-body">
                             <p data-i18n="desc_202">Réalisation en binôme de mesures sur des systèmes de transmission pour évaluer la qualité des signaux, avec analyse et présentation des résultats via cartographie radio et hypsogramme.</p>
-                            <ul class="tech-tags"><li>Signaux</li><li>Mesures</li></ul>
+                            <ul class="tech-tags">
+                                <li data-i18n="tag_sig">Signaux</li>
+                                <li data-i18n="tag_mes">Mesures</li>
+                            </ul>
                         </div>
                     </article>
 
                     <article class="project-card" data-category="network">
                         <div class="card-header">
-                            <span class="tag">SAE 2.01</span>
+                            <span class="tag" data-i18n="tag_201">SAE 2.01</span>
                             <h3 data-i18n="tit_201">Réseaux locaux</h3>
                         </div>
                         <div class="card-body">
                             <p data-i18n="desc_201">Obtention de la certification CCNA1, axée sur les bases des réseaux locaux et la configuration des équipements actifs.</p>
-                            <ul class="tech-tags"><li>CCNA1</li><li>Switching</li></ul>
+                            <ul class="tech-tags">
+                                <li>CCNA1</li>
+                                <li>Switching</li>
+                            </ul>
                         </div>
                     </article>
 
                     <article class="project-card" data-category="data">
                         <div class="card-header">
-                            <span class="tag">SAE 1.05</span>
+                            <span class="tag" data-i18n="tag_105">SAE 1.05</span>
                             <h3 data-i18n="tit_105">Traiter des données</h3>
                         </div>
                         <div class="card-body">
                             <p data-i18n="desc_105">J’ai approfondi Python pour traiter des données (dataset : Top 500 des businessmen). Objectif : formater des données et réaliser des analyses complexes.</p>
-                            <ul class="tech-tags"><li>Python</li><li>Data</li></ul>
+                            <ul class="tech-tags">
+                                <li>Python</li>
+                                <li>Data</li>
+                            </ul>
                         </div>
                     </article>
 
                     <article class="project-card" data-category="web">
                         <div class="card-header">
-                            <span class="tag">SAE 1.04</span>
+                            <span class="tag" data-i18n="tag_104">SAE 1.04</span>
                             <h3 data-i18n="tit_104">Présence en ligne</h3>
                         </div>
                         <div class="card-body">
                             <p data-i18n="desc_104">J’ai découvert HTML et CSS pour créer un site de portfolio, hébergé sur les serveurs de l’IUT en respectant les normes W3C.</p>
-                            <ul class="tech-tags"><li>HTML</li><li>CSS</li></ul>
+                            <ul class="tech-tags">
+                                <li>HTML</li>
+                                <li>CSS</li>
+                            </ul>
                         </div>
                     </article>
 
                     <article class="project-card" data-category="telecom">
                         <div class="card-header">
-                            <span class="tag">SAE 1.03</span>
+                            <span class="tag" data-i18n="tag_103">SAE 1.03</span>
                             <h3 data-i18n="tit_103">Transmission</h3>
                         </div>
                         <div class="card-body">
                             <p data-i18n="desc_103">L’objectif était de réaliser des mesures pour caractériser les supports de transmission utilisés dans notre département d'IUT (cuivre, fibre, coaxial).</p>
-                            <ul class="tech-tags"><li>Câblage</li><li>Physique</li></ul>
+                            <ul class="tech-tags">
+                                <li data-i18n="tag_cab">Câblage</li>
+                                <li data-i18n="tag_phys">Physique</li>
+                            </ul>
                         </div>
                     </article>
 
                     <article class="project-card" data-category="network">
                         <div class="card-header">
-                            <span class="tag">SAE 1.02</span>
+                            <span class="tag" data-i18n="tag_102">SAE 1.02</span>
                             <h3 data-i18n="tit_102">Initiation Réseaux</h3>
                         </div>
                         <div class="card-body">
                             <p data-i18n="desc_102">Conception d'une petite infrastructure réseau pour le festival du Printemps de Bourges dans un contexte fictif. Application des configs de base aux switches.</p>
-                            <ul class="tech-tags"><li>Infra</li><li>Switching</li></ul>
+                            <ul class="tech-tags">
+                                <li data-i18n="tag_infra">Infra</li>
+                                <li>Switching</li>
+                            </ul>
                         </div>
                     </article>
 
                     <article class="project-card" data-category="security">
                         <div class="card-header">
-                            <span class="tag">SAE 1.01</span>
+                            <span class="tag" data-i18n="tag_101">SAE 1.01</span>
                             <h3 data-i18n="tit_101">Hygiène informatique</h3>
                         </div>
                         <div class="card-body">
                             <p data-i18n="desc_101">Cette première SAE s'est présentée sous forme ludique : création de scénarios fictifs sur l'hygiène informatique pour faire deviner des méthodes d'attaques.</p>
-                            <ul class="tech-tags"><li>Sensibilisation</li><li>Scénarios</li></ul>
+                            <ul class="tech-tags">
+                                <li data-i18n="tag_sens">Sensibilisation</li>
+                                <li data-i18n="tag_scen">Scénarios</li>
+                            </ul>
                         </div>
                     </article>
 
