--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                             </p>
                             <ul class="tech-tags">
                                 <li>TryHackMe</li>
-                                <li>Root-Me</li>
+                                <li>CTF</li>
                             </ul>
                         </div>
                     </article>
