--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             <div class="badge-overlay">
                                 <i class="fas fa-lock"></i>
                             </div>
-                            <img src="assets/img/CCNA.png" alt="Badge Cisco CCNA 3" class="badge-img">
+                            <img src="assets/img/CCNA3.png" alt="Badge Cisco CCNA 3" class="badge-img">
                             <div class="badge-info">
                                 <h4>CCNA 3</h4>
                                 <span>Enterprise Networking, Security & Automation</span>
