--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     
                     <div class="cta-group">
                         <a href="#projects" class="btn-primary"><span data-i18n="btn_sae">Voir mes SAE</span> <i class="fas fa-arrow-right"></i></a>
-                        <a href="assets/cv.pdf" target="_blank" class="btn-secondary"><span data-i18n="btn_cv">Mon CV</span> <i class="fas fa-download"></i></a>
+                        <a href="assets/img/CV.pdf" target="_blank" class="btn-secondary"><span data-i18n="btn_cv">Mon CV</span> <i class="fas fa-download"></i></a>
                     </div>
                     
                     <div class="hero-stats">
