--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                             <h3>Hacking (CTF)</h3>
                         </div>
                         <div class="card-body">
-                            <p data-i18n="desc_ctf">Je fais des défis pratiques de hacking que l'on appelle "CTF". Le but consiste à pirater une machine en partant d'une application web vulnérable fictive. Je suis actuellement niveau LEGEND et me situe à la 20k ème place (Top 2%).</p>
+                            <p data-i18n="desc_ctf">Je me donne des défis pratiques de hacking que l'on appelle "CTF". Le but consiste à pirater une machine en partant d'une application web vulnérable fictive. Je suis actuellement niveau LEGEND et me situe à la 20k ème place (Top 2%).</p>
                             <p class="project-link-p">
                                 <a href="https://tryhackme.com/p/Will8San" target="_blank" class="link-text"><i class="fas fa-user-secret"></i> <span data-i18n="link_thm">Voir mon profil TryHackMe</span></a>
                             </p>
