--- a/index.html
+++ b/index.html
@@ -180,9 +180,10 @@
             </div>
         </section>
 
-        <section id="projects" class="section bg-alt">
+       <section id="projects" class="section bg-alt">
             <div class="container">
                 <h2 class="section-title" data-i18n="proj_title">Projets Universitaires (SAEs) 🎓</h2>
+                <p class="section-subtitle" style="text-align:center; color:var(--accent); margin-bottom:30px; font-size:0.9rem;">(Cliquez sur les projets pour voir les images 📸)</p>
                 
                 <div class="projects-grid">
                     
@@ -192,44 +193,116 @@
                             <h3>Hacking (CTF)</h3>
                         </div>
                         <div class="card-body">
-                            <p data-i18n="desc_ctf">Je me donne des défis pratiques de hacking que l'on appelle "CTF". Le but consiste à pirater une machine en partant d'une application web vulnérable fictive. Je suis actuellement niveau LEGEND et me situe à la 20k ème place (Top 2%).</p>
+                            <p data-i18n="desc_ctf">Je fais des défis pratiques de hacking que l'on appelle "CTF". Le but consiste à pirater une machine en partant d'une application web vulnérable fictive.</p>
                             <p class="project-link-p">
                                 <a href="https://tryhackme.com/p/Will8San" target="_blank" class="link-text"><i class="fas fa-user-secret"></i> <span data-i18n="link_thm">Voir mon profil TryHackMe</span></a>
                             </p>
-                            <ul class="tech-tags">
-                                <li>TryHackMe</li>
-                                <li>CTF</li>
-                            </ul>
+                            <ul class="tech-tags"><li>TryHackMe</li><li>CTF</li></ul>
                         </div>
                     </article>
 
-                    <article class="project-card" data-category="network">
+                    <article class="project-card clickable-project" data-images="gestionserv.png,gns3.png,moba.png">
                         <div class="card-header">
                             <span class="tag" data-i18n="tag_204">SAE 2.04</span>
                             <h3 data-i18n="tit_204">Projet intégratif</h3>
                         </div>
                         <div class="card-body">
-                            <p data-i18n="desc_204">Projet d’équipe (3 personnes) pour concevoir une infrastructure réseau sécurisée pour la NBA (scénario fictif), en appliquant des configurations sur switches, routeurs et serveurs DNS/DHCP/Web.</p>
-                            <ul class="tech-tags">
-                                <li>Cisco</li>
-                                <li data-i18n="tag_infra">Infra</li>
-                            </ul>
+                            <p data-i18n="desc_204">Projet d’équipe pour concevoir une infrastructure réseau sécurisée pour la NBA.</p>
+                            <ul class="tech-tags"><li>Cisco</li><li data-i18n="tag_infra">Infra</li></ul>
                         </div>
                     </article>
 
-                    <article class="project-card" data-category="dev">
+                    <article class="project-card clickable-project" data-images="uml.png">
                        <div class="card-header">
                            <span class="tag" data-i18n="tag_203">SAE 2.03</span>
                            <h3 data-i18n="tit_203">Solution informatique</h3>
                        </div>
                        <div class="card-body">
-                           <p data-i18n="desc_203">Conception d’une base de données SQL sur les incidents en cybersécurité des 10 dernières années, avec un diagramme UML pour structurer les liens entre classes.</p>
-                           <ul class="tech-tags">
-                               <li>SQL</li>
-                               <li>UML</li>
-                           </ul>
+                           <p data-i18n="desc_203">Conception d’une base de données SQL sur les incidents en cybersécurité.</p>
+                           <ul class="tech-tags"><li>SQL</li><li>UML</li></ul>
                        </div>
                    </article>
+
+                   <article class="project-card clickable-project" data-images="rapport2.02.png">
+                        <div class="card-header">
+                            <span class="tag" data-i18n="tag_202">SAE 2.02</span>
+                            <h3 data-i18n="tit_202">Mesures physiques</h3>
+                        </div>
+                        <div class="card-body">
+                            <p data-i18n="desc_202">Réalisation en binôme de mesures sur des systèmes de transmission.</p>
+                            <ul class="tech-tags"><li data-i18n="tag_sig">Signaux</li><li data-i18n="tag_mes">Mesures</li></ul>
+                        </div>
+                    </article>
+
+                    <article class="project-card clickable-project" data-images="CCNA1.png,CertificatCISCO.png">
+                        <div class="card-header">
+                            <span class="tag" data-i18n="tag_201">SAE 2.01</span>
+                            <h3 data-i18n="tit_201">Réseaux locaux</h3>
+                        </div>
+                        <div class="card-body">
+                            <p data-i18n="desc_201">Obtention de la certification CCNA1, axée sur les bases des réseaux locaux.</p>
+                            <ul class="tech-tags"><li>CCNA1</li><li>Switching</li></ul>
+                        </div>
+                    </article>
+
+                    <article class="project-card clickable-project" data-images="code.png,prediction.png,matrice.png">
+                        <div class="card-header">
+                            <span class="tag" data-i18n="tag_105">SAE 1.05</span>
+                            <h3 data-i18n="tit_105">Traiter des données</h3>
+                        </div>
+                        <div class="card-body">
+                            <p data-i18n="desc_105">J’ai approfondi Python pour traiter des données (dataset : Top 500 des businessmen).</p>
+                            <ul class="tech-tags"><li>Python</li><li>Data</li></ul>
+                        </div>
+                    </article>
+
+                    <article class="project-card clickable-project" data-images="site.png">
+                        <div class="card-header">
+                            <span class="tag" data-i18n="tag_104">SAE 1.04</span>
+                            <h3 data-i18n="tit_104">Présence en ligne</h3>
+                        </div>
+                        <div class="card-body">
+                            <p data-i18n="desc_104">Création d'un site portfolio respectant les normes W3C.</p>
+                            <ul class="tech-tags"><li>HTML</li><li>CSS</li></ul>
+                        </div>
+                    </article>
+
+                    <article class="project-card clickable-project" data-images="rapport_extrait.png">
+                        <div class="card-header">
+                            <span class="tag" data-i18n="tag_103">SAE 1.03</span>
+                            <h3 data-i18n="tit_103">Transmission</h3>
+                        </div>
+                        <div class="card-body">
+                            <p data-i18n="desc_103">Mesures pour caractériser les supports de transmission (cuivre, fibre, coaxial).</p>
+                            <ul class="tech-tags"><li data-i18n="tag_cab">Câblage</li><li data-i18n="tag_phys">Physique</li></ul>
+                        </div>
+                    </article>
+
+                    <article class="project-card clickable-project" data-images="MUSILAC.png">
+                        <div class="card-header">
+                            <span class="tag" data-i18n="tag_102">SAE 1.02</span>
+                            <h3 data-i18n="tit_102">Initiation Réseaux</h3>
+                        </div>
+                        <div class="card-body">
+                            <p data-i18n="desc_102">Conception d'une petite infrastructure réseau pour le festival du Printemps de Bourges.</p>
+                            <ul class="tech-tags"><li data-i18n="tag_infra">Infra</li><li>Switching</li></ul>
+                        </div>
+                    </article>
+
+                    <article class="project-card clickable-project" data-images="MiseEnSituationSAE1.png,Menace face Situation1.png,Protections - reponse carte face.png,Actions preventives carte face.png,Cybermon situation -menace Card.jpg">
+                        <div class="card-header">
+                            <span class="tag" data-i18n="tag_101">SAE 1.01</span>
+                            <h3 data-i18n="tit_101">Hygiène informatique</h3>
+                        </div>
+                        <div class="card-body">
+                            <p data-i18n="desc_101">Création de scénarios fictifs sur l'hygiène informatique (jeu de cartes).</p>
+                            <ul class="tech-tags"><li data-i18n="tag_sens">Sensibilisation</li><li data-i18n="tag_scen">Scénarios</li></ul>
+                        </div>
+                    </article>
+
+                </div>
+            </div>
+        </section>
 
                    <article class="project-card" data-category="telecom">
                         <div class="card-header">
