--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
                             <div class="skill-item">
                                 <div class="info">
                                     <span data-i18n="skill_cisco">Réseaux Cisco (CCNA 2 validé)</span>
-                                    <span data-i18n="lvl_adv">Avancé</span>
                                 </div>
                                 <div class="progress-bar"><div class="fill" style="width: 80%"></div></div>
                             </div>
@@ -96,7 +95,6 @@
                             <div class="skill-item">
                                 <div class="info">
                                     <span data-i18n="skill_hack">Hacking (CTF)</span>
-                                    <span data-i18n="lvl_adv">Avancé</span>
                                 </div>
                                 <div class="progress-bar"><div class="fill" style="width: 75%"></div></div>
                             </div>
@@ -109,21 +107,18 @@
                             <div class="skill-item">
                                 <div class="info">
                                     <span data-i18n="skill_py">Python (Data)</span>
-                                    <span data-i18n="lvl_int">Intermédiaire</span>
                                 </div>
                                 <div class="progress-bar"><div class="fill" style="width: 60%"></div></div>
                             </div>
                             <div class="skill-item">
                                 <div class="info">
-                                    <span>HTML5 / CSS3</span>
-                                    <span data-i18n="lvl_int">Intermédiaire</span>
+                                    <span>HTML5 / CSS</span>
                                 </div>
                                 <div class="progress-bar"><div class="fill" style="width: 50%"></div></div>
                             </div>
                             <div class="skill-item">
                                 <div class="info">
                                     <span data-i18n="skill_sql">SQL / Bases de données</span>
-                                    <span data-i18n="lvl_int">Intermédiaire</span>
                                 </div>
                                 <div class="progress-bar"><div class="fill" style="width: 60%"></div></div>
                             </div>
