--- a/index.html
+++ b/index.html
@@ -338,9 +338,9 @@
                 <p data-i18n="contact_d">Étudiant motivé par les défis techniques, n'hésitez pas à me contacter pour échanger.</p>
                 
                 <div class="contact-card">
-                    <a href="mailto:william.trouve@etudiant.univ-lr.fr" class="contact-item">
+                    <a href="mailto:w.trv@hotmail.com" class="contact-item">
                         <i class="fas fa-envelope"></i>
-                        <span>william.trouve@etudiant.univ-lr.fr</span>
+                        <span>w.trv@hotmail.com</span>
                     </a>
                     <a href="https://www.linkedin.com/in/william-trouv%C3%A9-904791347/" target="_blank" class="contact-item">
                         <i class="fab fa-linkedin"></i>
